# gamecal

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.example.toml  pyproject.toml
scripts/: nightly.sh
src/backloggd_sync/: cli.py  config.py  gcal.py  igdb.py  ledger.py  web.py
src/backloggd_sync/templates/: base.html  index.html  search.html
src/gamecal/: cli.py  config.py  gcal.py  igdb.py  ledger.py  steam.py  web.py
src/gamecal/templates/: base.html  index.html  search.html
