[project]
name = "backloggd-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Drew Hays", email = "drewshays@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "click>=8.4.2",
    "httpx>=0.28.1",
    "playwright>=1.61.0",
]

[project.scripts]
backloggd-sync = "backloggd_sync:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
