[project]
name = "gamecal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Drew Hays", email = "drew@hays.fm" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "click>=8.4.2",
    "fastapi>=0.139.2",
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]

[project.scripts]
gamecal = "gamecal:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
